...
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="@color/blue"
        android:textColor="@color/white"
        android:text="Schedules"
        android:typeface="serif"
        android:textSize="36dp"
        android:textAlignment="center"
        android:id="@+id/textViewSchedules"/>

    <Button
...
        android:textSize="36dp" />


        <ListView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/ScheduleNames"
            android:layout_below="@+id/textViewSchedules" />


</RelativeLayout>
