...
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@color/background"
        android:textColor="@color/blue"
        android:textSize="24dp"
        android:typeface="serif"
        android:id="@+id/textViewProfileScheduleName"
        android:layout_alignParentTop="true"
        android:layout_toEndOf="@+id/textViewScheduleTimeofProfile" />

    <Button
        android:id="@+id/toggleScheduleProfileStatus"
        android:layout_width="72dp"
...
